# CMCFair2023

./: Procfile  README.md  config.toml  config_env_mapping.toml  pyproject.toml
fair/: __init__.py  __main__.py  app.py  logger.py  routes.py  utils.py
fair/bot/: __init__.py
fair/bot/filters/: __init__.py  callback_data.py  roles.py  text.py
fair/bot/handlers/: __init__.py  admin_permanent_menu.py  basic_commands_flow.py  cashier_flow.py  manager_location_flow.py  manager_permanent_menu.py  manager_registration_flow.py  manager_reward_flow.py  money_transfer_flow.py  player_permanent_menu.py  player_queue_flow.py  player_registration_flow.py
fair/bot/keyboards/: __init__.py
fair/bot/middlewares/: __init__.py  extra_arguments.py  message_antiflood.py
fair/bot/states/: __init__.py  storage.py
fair/config/: __init__.py  models.py
fair/db/: __init__.py  adapter.py  exceptions.py  models.py
fair/db/operations/: finished_location.py  location.py  manager.py  managers_blacklist_record.py  player.py  purchase_record.py  queue_entry.py  reward_record.py  role.py  shop.py  telegram_account.py  transfer_record.py  user.py
